@@ -10,6 +10,7 @@
     <script src="js/break_eternity.js"></script>
     <script src="js/eternal_notations.js"></script>
     <script src="js/functionTemplate.js" charset="utf-8" type="text/javascript"></script>
+    <script src="js/statReset.js" charset="utf-8" type="text/javascript"></script>
     <script src="js/main2.js" charset="utf-8" type="text/javascript"></script>
 
 
@@ -44,28 +45,31 @@
                 </script>
             </div>
             <div class="button-wrapper">
-                <button onclick="rarity10()">|</button>
+                <button onclick="rarity10()">1</button>
+            </div>
+            <div class="button-wrapper">
+                <button onclick="statReset1()">Reset Data</button>
             </div>
         </div>
         <!-- Layer 1 (Rebirth) -->
         <div class="row">
             <div class="button-wrapper">
                 <p id="topButton1">Requirement: Common [#2]</p>
-                <button id="button1" onclick="resetRebirth()">Reset for Rebirths</button>
-                <p id="botUpgrade1">Unable to reset.</p>
+                <button id="button1" class="button-rebirth" onclick="resetRebirth()">Reset for Rebirths</button>
+                <p id="botUpgrade1" class="text-rebirth">Unable to reset.</p>
             </div>
             <div class="button-wrapper">
-                <p id="topUpgrade2">1 Rebirths</p>
-                <button id="button2" onclick="luckUpgrade()">Luck Upgrade</button>
-                <p id="botUpgrade2">x1 Luck</p>
+                <p id="topUpgrade2" class="text-rebirth">1 Rebirths</p>
+                <button id="button2" class="button-luck" onclick="luckUpgrade()">Luck Upgrade</button>
+                <p id="botUpgrade2" class="text-luck">x1 Luck</p>
             </div>
             <div class="button-wrapper">
-                <p id="topUpgrade3">10 Rebirths</p>
-                <button id="button3" onclick="rebirthUpgrade()">Rebirth Upgrade</button>
-                <p id="botUpgrade3">x1 Rebirths</p>
+                <p id="topUpgrade3" class="text-rebirth">10 Rebirths</p>
+                <button id="button3" class="button-rebirth" onclick="rebirthUpgrade()">Rebirth Upgrade</button>
+                <p id="botUpgrade3" class="text-rebirth">x1 Rebirths</p>
             </div>
             <div class="button-wrapper">
-                <p id="topUpgrade4">1 Rebirths</p>
+                <p id="topUpgrade4" class="text-rebirth">1 Rebirths</p>
                 <button id="button4">Roll Speed Upgrade</button>
                 <p id="topUpgrade4">x1 Roll Speed</p>
             </div>
@@ -73,59 +77,59 @@
         <div class="row">
             <div class="button-wrapper">
                 <p id="topUpgrade5">Requirement: Common [#8]</p>
-                <button id="button5" onclick="resetPrestige()">Reset for Prestiges</button>
-                <p id="botUpgrade5">Unable to reset.</p>
+                <button id="button5" class="button-prestige" onclick="resetPrestige()">Reset for Prestiges</button>
+                <p id="botUpgrade5" class="text-prestige">Unable to reset.</p>
             </div>
             <div class="button-wrapper">
-                <p id="topUpgrade6">1 Prestiges</p>
-                <button id="button6" onclick="upgradeLuck2()">Luck Upgrade II</button>
-                <p id="botUpgrade6">x1 Luck</p>
+                <p id="topUpgrade6" class="text-prestige">1 Prestiges</p>
+                <button id="button6" class="button-luck" onclick="upgradeLuck2()">Luck Upgrade II</button>
+                <p id="botUpgrade6" class="text-luck">x1 Luck</p>
             </div>
             <div class="button-wrapper">
-                <p id="topUpgrade7">1 Prestiges</p>
-                <button id="button7" onclick="upgradeRebirth2()">Rebirth Upgrade II</button>
-                <p id="botUpgrade7">x1 Rebirths</p>
+                <p id="topUpgrade7" class="text-prestige">1 Prestiges</p>
+                <button id="button7" class="button-rebirth" onclick="upgradeRebirth2()">Rebirth Upgrade II</button>
+                <p id="botUpgrade7" class="text-rebirth">x1 Rebirths</p>
             </div>
             <div class="button-wrapper">
-                <p id="topUpgrade8">2 Prestiges</p>
-                <button id="button8" onclick="upgradePrestige()">Prestige Upgrade</button>
-                <p id="botUpgrade8">x1 Prestiges</p>
+                <p id="topUpgrade8" class="text-prestige">2 Prestiges</p>
+                <button id="button8" class="button-prestige" onclick="upgradePrestige()">Prestige Upgrade</button>
+                <p id="botUpgrade8" class="text-prestige">x1 Prestiges</p>
             </div>
         </div>
         <div class="row">
             <div class="button-wrapper">
                 <p>Requirement: Common [#30]</p>
-                <button onclick="resetRebirth()">Reset for Transcensions</button>
-                <p>Unable to reset.</p>
+                <button id="button9" class="button-transcension" onclick="resetTranscension()">Reset for Transcensions</button>
+                <p id="botUpgrade9" class="text-transcension">Unable to reset.</p>
             </div>
             <div class="button-wrapper">
-                <p>1 Transcensions</p>
-                <button>Luck Upgrade III</button>
-                <p>x1 Luck</p>
+                <p id="topUpgrade10" class="text-transcension">1 Transcensions</p>
+                <button id="button10" class="button-luck" onclick="upgradeLuck3()">Luck Upgrade III</button>
+                <p id="botUpgrade10"class="text-luck">x1 Luck</p>
             </div>
             <div class="button-wrapper">
-                <p>1 Transcensions</p>
-                <button>Rebirth Upgrade III</button>
-                <p>x1 Rebirths</p>
+                <p class="text-transcension">1 Transcensions</p>
+                <button class="button-rebirth">Rebirth Upgrade III</button>
+                <p class="text-rebirth">x1 Rebirths</p>
             </div>
             <div class="button-wrapper">
-                <p>1 Transcensions</p>
-                <button>Prestige Upgrade II</button>
-                <p>x1 Prestiges</p>
+                <p class="text-transcension">1 Transcensions</p>
+                <button class="button-prestige">Prestige Upgrade II</button>
+                <p class="text-prestige">x1 Prestiges</p>
             </div>
             <div class="button-wrapper">
-                <p>20 Transcensions</p>
-                <button onclick="incrementRebirth()">Transcension Upgrade</button>
-                <p>x1 Transcensions</p>
+                <p class="text-transcension">20 Transcensions</p>
+                <button class="button-transcension" onclick="incrementRebirth()">Transcension Upgrade</button>
+                <p class="text-transcension">x1 Transcensions</p>
             </div>
         </div>
     </div>
 
     <div class="statistics">
-        <p class="stat-design" id="multTranscension">Transcension Multiplier: 1x</p>
-        <p class="stat-design" id="multPrestige">Prestige Multiplier: 1x</p>
-        <p class="stat-design" id="multRebirth">Rebirth Multiplier: 1x</p>
         <p class="stat-design" id="multLuck">Luck Multiplier: 1x</p>
+        <p class="stat-design" id="multRebirth">Rebirth Multiplier: 1x</p>
+        <p class="stat-design" id="multPrestige">Prestige Multiplier: 1x</p>
+        <p class="stat-design" id="multTranscension">Transcension Multiplier: 1x</p>
         <p class="stat-design" id="rollSpeed">Roll Speed: 1 every 1000 ms</p>
         <p class="stat-design" id="totalRolls">Total Rolls: 0</p>
     </div>
@@ -135,7 +139,7 @@
         <p class="stat-design" id="stat-prestige">Prestige</p>
         <p class="stat-design" id="stat-transcension">Transcension</p>
     </div>
-    <p id="rarity">what the sigma</p>
+    <p id="rarity">Errorwhat the sigma</p>
 
 </body>
 
