@@ -1,7 +1,7 @@
+/* Default font for game: Fredoka */
 @font-face {
     font-family: 'Fredoka';
     src: url('fonts/Fredoka.ttf');
-
 }
 
 body {
@@ -14,37 +14,6 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
 }
-
-/* gradients
-linear-gradient(90deg, #7a97ff 6.66%, #6f58ff 43.33%, #895fff 66.66%);
-
-*/
-
-/*
-button {
-    background-image: linear-gradient(90deg, #000000 6.66%, #1d1d1d 43.33%, #000000 66.66%);
-    border-radius: 16px;
-    border-style:solid;
-    border-color:#ffffff;
-    box-sizing: border-box;
-    color: #000000;
-    cursor: pointer;
-    flex-shrink: 0;
-    font-family: 'Fredoka';
-    font-size: 16px;
-    font-weight: 500;
-    height: 128px;
-    width: 256px;
-    padding: 0 2rem;
-    text-align: center;
-    text-shadow: rgba(0, 0, 0, .25) 0 3px 8px;
-    transition: all .5s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    }
-
-*/
 
 button {
     background-color: black;
@@ -126,6 +95,55 @@ button.buyable:hover {
     font-size: 14px;
 }
 
+.text-luck {
+    background: linear-gradient(90deg, hsl(125, 100%, 90%) 10%, hsl(125, 100%, 70%) 50%, hsl(125, 100%, 50%) 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 600;
+}
+
+.text-rebirth {
+    background: linear-gradient(90deg, hsl(200, 100%, 90%) 10%, hsl(200, 100%, 70%) 50%, hsl(200, 100%, 50%) 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 600;
+}
+
+.text-prestige {
+    background: linear-gradient(90deg, hsl(270, 100%, 90%) 10%, hsl(270, 100%, 70%) 50%, hsl(270, 100%, 50%) 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 600;
+}
+
+.text-transcension {
+    background: linear-gradient(90deg, hsl(145, 100%, 90%) 10%, hsl(145, 100%, 70%) 50%, hsl(145, 100%, 50%) 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 600;
+}
+
+#stat-rebirth {
+    background: linear-gradient(90deg, hsl(200, 100%, 75%) 10%, hsl(200, 100%, 50%) 50%, hsl(200, 100%, 25%) 90%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+#stat-prestige {
+    background: linear-gradient(90deg, hsl(270, 100%, 75%) 10%, hsl(270, 100%, 50%) 50%, hsl(270, 100%, 25%) 90%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+#stat-transcension {
+    background: linear-gradient(90deg, hsl(145, 100%, 75%) 6.66%, hsl(145, 100%, 60%) 43.33%, hsl(145, 100%, 50%) 66.66%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
 #rarity {
     position: absolute;
     bottom: 0px;
@@ -134,32 +152,12 @@ button.buyable:hover {
     
     font-size: 48px;
     font-weight: 600;
-    background: linear-gradient(90deg, hsl(0, 0%, 75%) 6.66%, hsl(0, 0%, 60%) 43.33%, hsl(0, 0%, 50%) 66.66%);
+    background: linear-gradient(90deg, hsl(0, 0%, 75%) 10%, hsl(0, 0%, 50%) 50.00%, hsl(0, 0%, 25%) 90.00%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
 }
 
-#stat-rebirth {
-    background: linear-gradient(90deg, hsl(200, 100%, 75%) 6.66%, hsl(200, 100%, 60%) 43.33%, hsl(200, 100%, 50%) 66.66%);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-}
-
-#stat-prestige {
-    background: linear-gradient(90deg, hsl(270, 100%, 75%) 6.66%, hsl(270, 100%, 60%) 43.33%, hsl(270, 100%, 50%) 66.66%);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-}
-
-#stat-transcension {
-    background: linear-gradient(90deg, hsl(125, 100%, 75%) 6.66%, hsl(125, 100%, 60%) 43.33%, hsl(125, 100%, 50%) 66.66%);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-}
 
 #buttonRoll {
     background-color: hsl(0, 0%, 25%);
@@ -168,4 +166,47 @@ button.buyable:hover {
 #buttonRoll:hover {
     background-color: hsl(0, 0%, 50%);
     transition-duration: .1s;
+}
+
+/*
+.button-luck.buyable {
+    border-color: hsl(125, 100%, 70%);
+    color: hsl(125, 100%, 70%);
+}
+
+
+.button-rebirth.buyable {
+    border-color: hsl(200, 100%, 70%);
+    color: hsl(200, 100%, 70%);
+}
+
+.button-prestige.buyable {
+    border-color: hsl(270, 100%, 70%);
+    color: hsl(270, 100%, 70%);
+}   
+
+.button-transcension.buyable {
+    border-color: hsl(145, 100%, 70%);
+    color: hsl(145, 100%, 70%);
+}
+*/
+
+.button-luck.buyable:hover {
+    border-color: hsl(125, 100%, 70%);
+    color: hsl(125, 100%, 70%);
+}
+
+.button-rebirth.buyable:hover {
+    border-color: hsl(200, 100%, 70%);
+    color: hsl(200, 100%, 70%);
+}
+
+.button-prestige.buyable:hover {
+    border-color: hsl(270, 100%, 65%);
+    color: hsl(270, 100%, 65%);
+}   
+
+.button-transcension.buyable:hover {
+    border-color: hsl(145, 100%, 70%);
+    color: hsl(145, 100%, 70%);
 }
